load("@io_bazel_rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "go_default_library",
    srcs = ["constants.go"],
    importpath = "BigBang/test/apis",
    visibility = ["//visibility:public"],
)

go_test(
    name = "go_default_test",
    srcs = ["profile_and_get_profile_test.go"],
    embed = [":go_default_library"],
    deps = [
        "//cmd/lambda/get_profile/config:go_default_library",
        "//cmd/lambda/profile/config:go_default_library",
        "//internal/app/feed_attributes:go_default_library",
        "//internal/pkg/api:go_default_library",
        "//vendor/github.com/mitchellh/mapstructure:go_default_library",
        "//vendor/github.com/stretchr/testify/assert:go_default_library",
    ],
)
