load("@io_bazel_rules_go//go:def.bzl", "go_library")

go_library(
    name = "go_default_library",
    srcs = [
        "milestone.go",
        "objective.go",
        "profile.go",
        "project.go",
        "proxy_votes.go",
        "rating_vote.go",
    ],
    importpath = "BigBang/test/constants",
    visibility = ["//visibility:public"],
)
