load("@io_bazel_rules_go//go:def.bzl", "go_library")

go_library(
    name = "go_default_library",
    srcs = [
        "activity.go",
        "milestone.go",
        "milestone_points.go",
        "objective.go",
        "post.go",
        "profile.go",
        "project.go",
        "proxy_votes.go",
        "rating_vote.go",
        "wallet_address.go",
    ],
    importpath = "BigBang/test/constants",
    visibility = ["//visibility:public"],
    deps = [
        "//internal/app/feed_attributes:go_default_library",
        "//vendor/github.com/ethereum/go-ethereum/common/math:go_default_library",
    ],
)
