load("@io_bazel_rules_go//go:def.bzl", "go_binary", "go_library")

go_library(
    name = "go_default_library",
    srcs = ["test_pressure.go"],
    importpath = "BigBang/test/pressure",
    visibility = ["//visibility:private"],
    deps = ["//internal/pkg/api:go_default_library"],
)

go_binary(
    name = "pressure",
    embed = [":go_default_library"],
    importpath = "BigBang/test/pressure",
    visibility = ["//visibility:public"],
)
