load("@io_bazel_rules_go//go:def.bzl", "go_binary", "go_library")

go_library(
    name = "go_default_library",
    srcs = ["feed_event_log.go"],
    importpath = "BigBang/cmd/app/feed_event_log",
    visibility = ["//visibility:private"],
    deps = [
        "//internal/platform/eth_config:go_default_library",
        "//internal/platform/getstream_config:go_default_library",
        "//internal/platform/postgres_config/client_config:go_default_library",
    ],
)

go_binary(
    name = "feed_event_log",
    embed = [":go_default_library"],
    visibility = ["//visibility:public"],
)
