load("@io_bazel_rules_go//go:def.bzl", "go_binary", "go_library")

go_library(
    name = "go_default_library",
    srcs = ["attach_session.go"],
    importpath = "BigBang/cmd/lambda/attach_session",
    visibility = ["//visibility:private"],
    deps = [
        "//internal/app/feed_attributes:go_default_library",
        "//internal/platform/getstream_config:go_default_library",
        "//internal/platform/postgres_config/client_config:go_default_library",
        "//internal/platform/postgres_config/session_record_config:go_default_library",
        "@com_github_aws_aws_lambda_go//lambda:go_default_library",
        "@in_gopkg_getstream_stream_go2_v1//:go_default_library",
    ],
)

go_binary(
    name = "attach_session",
    embed = [":go_default_library"],
    visibility = ["//visibility:public"],
)
