load("@io_bazel_rules_go//go:def.bzl", "go_binary", "go_library")

go_library(
    name = "go_default_library",
    srcs = ["attach_session.go"],
    importpath = "BigBang/cmd/lambda/attach_session",
    visibility = ["//visibility:private"],
    deps = [
        "//internal/app/feed_attributes:go_default_library",
        "//internal/pkg/error_config:go_default_library",
        "//internal/platform/getstream_config:go_default_library",
        "//internal/platform/postgres_config/client_config:go_default_library",
        "//internal/platform/postgres_config/session_record_config:go_default_library",
        "//vendor/github.com/aws/aws-lambda-go/lambda:go_default_library",
        "//vendor/gopkg.in/GetStream/stream-go2.v1:go_default_library",
    ],
)

go_binary(
    name = "attach_session",
    embed = [":go_default_library"],
    visibility = ["//visibility:public"],
)
