load("@io_bazel_rules_go//go:def.bzl", "go_binary", "go_library")

go_library(
    name = "go_default_library",
    srcs = ["delete_profile.go"],
    importpath = "BigBang/cmd/lambda/delete_profile",
    visibility = ["//visibility:private"],
    deps = [
        "//internal/pkg/error_config:go_default_library",
        "//internal/platform/postgres_config/actor_profile_record_config:go_default_library",
        "//internal/platform/postgres_config/client_config:go_default_library",
        "//vendor/github.com/aws/aws-lambda-go/lambda:go_default_library",
    ],
)

go_binary(
    name = "get_profile",
    embed = [":go_default_library"],
    visibility = ["//visibility:public"],
)
