load("@io_bazel_rules_go//go:def.bzl", "go_binary", "go_library", "go_test")

go_library(
    name = "go_default_library",
    srcs = ["feed_events_table_creator.go"],
    importpath = "BigBang/cmd/lambda/feed_events_table_creator",
    visibility = ["//visibility:private"],
    deps = [
        "//internal/pkg/error_config:go_default_library",
        "//internal/platform/postgres_config/actor_profile_record_config:go_default_library",
        "//internal/platform/postgres_config/actor_rewards_info_record_config:go_default_library",
        "//internal/platform/postgres_config/actor_votes_counters_record_config:go_default_library",
        "//internal/platform/postgres_config/client_config:go_default_library",
        "//internal/platform/postgres_config/post_config:go_default_library",
        "//internal/platform/postgres_config/post_replies_record_config:go_default_library",
        "//internal/platform/postgres_config/post_rewards_record_config:go_default_library",
        "//internal/platform/postgres_config/post_votes_counters_record_config:go_default_library",
        "//internal/platform/postgres_config/post_votes_record_config:go_default_library",
        "//internal/platform/postgres_config/purchase_mps_record_config:go_default_library",
        "//internal/platform/postgres_config/refuel_record_config:go_default_library",
        "//internal/platform/postgres_config/session_record_config:go_default_library",
        "//vendor/github.com/aws/aws-lambda-go/lambda:go_default_library",
    ],
)

go_binary(
    name = "feed_events_table_creator",
    embed = [":go_default_library"],
    visibility = ["//visibility:public"],
)

go_test(
    name = "go_default_test",
    srcs = ["feed_events_table_creator_test.go"],
    embed = [":go_default_library"],
    deps = ["//vendor/github.com/stretchr/testify/assert:go_default_library"],
)
