load("@io_bazel_rules_go//go:def.bzl", "go_binary", "go_library")

go_library(
    name = "go_default_library",
    srcs = ["feed_token_generator.go"],
    importpath = "BigBang/cmd/lambda/feed_token_generator",
    visibility = ["//visibility:private"],
    deps = [
        "//internal/app/feed_attributes:go_default_library",
        "//vendor/github.com/aws/aws-lambda-go/lambda:go_default_library",
        "//vendor/gopkg.in/GetStream/stream-go2.v1:go_default_library",
    ],
)

go_binary(
    name = "feed_token_generator",
    embed = [":go_default_library"],
    visibility = ["//visibility:public"],
)
