load("@io_bazel_rules_go//go:def.bzl", "go_binary", "go_library")

go_library(
    name = "go_default_library",
    srcs = ["feed_update_post_rewards.go"],
    importpath = "BigBang/cmd/lambda/feed_update_post_rewards",
    visibility = ["//visibility:private"],
    deps = [
        "//internal/pkg/error_config:go_default_library",
        "//internal/platform/postgres_config/client_config:go_default_library",
        "//internal/platform/postgres_config/post_rewards_record_config:go_default_library",
        "//vendor/github.com/aws/aws-lambda-go/lambda:go_default_library",
    ],
)

go_binary(
    name = "feed_update_post_rewards",
    embed = [":go_default_library"],
    visibility = ["//visibility:public"],
)
