load("@io_bazel_rules_go//go:def.bzl", "go_binary", "go_library")

go_library(
    name = "go_default_library",
    srcs = ["feed_upvote.go"],
    importpath = "BigBang/cmd/lambda/feed_upvote",
    visibility = ["//visibility:private"],
    deps = [
        "//internal/app/feed_attributes:go_default_library",
        "//internal/platform/eth_config:go_default_library",
        "//internal/platform/postgres_config/client_config:go_default_library",
        "//internal/platform/postgres_config/post_votes_record_config:go_default_library",
        "@com_github_aws_aws_lambda_go//lambda:go_default_library",
    ],
)

go_binary(
    name = "feed_upvote",
    embed = [":go_default_library"],
    visibility = ["//visibility:public"],
)
