load("@io_bazel_rules_go//go:def.bzl", "go_binary", "go_library", "go_test")

go_library(
    name = "go_default_library",
    srcs = ["feed_upvote.go"],
    importpath = "BigBang/cmd/lambda/feed_upvote",
    visibility = ["//visibility:private"],
    deps = [
        "//internal/app/feed_attributes:go_default_library",
        "//internal/pkg/error_config:go_default_library",
        "//internal/platform/eth_config:go_default_library",
        "//internal/platform/postgres_config/client_config:go_default_library",
        "//internal/platform/postgres_config/post_votes_record_config:go_default_library",
        "//vendor/github.com/aws/aws-lambda-go/lambda:go_default_library",
    ],
)

go_binary(
    name = "feed_upvote",
    embed = [":go_default_library"],
    visibility = ["//visibility:public"],
)

go_test(
    name = "go_default_test",
    srcs = ["feed_upvote_test.go"],
    embed = [":go_default_library"],
    deps = ["//vendor/github.com/stretchr/testify/assert:go_default_library"],
)
