load("@io_bazel_rules_go//go:def.bzl", "go_binary", "go_library")

go_library(
    name = "go_default_library",
    srcs = ["get_feed_post.go"],
    importpath = "BigBang/cmd/lambda/get_feed_post",
    visibility = ["//visibility:private"],
    deps = [
        "//internal/app/feed_attributes:go_default_library",
        "//internal/platform/postgres_config/client_config:go_default_library",
        "//internal/platform/postgres_config/post_config:go_default_library",
        "//internal/platform/postgres_config/post_replies_record_config:go_default_library",
        "//internal/platform/postgres_config/post_rewards_record_config:go_default_library",
        "@com_github_aws_aws_lambda_go//lambda:go_default_library",
    ],
)

go_binary(
    name = "get_feed_post",
    embed = [":go_default_library"],
    visibility = ["//visibility:public"],
)
