load("@io_bazel_rules_go//go:def.bzl", "go_binary", "go_library", "go_test")

go_library(
    name = "go_default_library",
    srcs = ["get_recent_votes.go"],
    importpath = "BigBang/cmd/lambda/get_recent_votes",
    visibility = ["//visibility:private"],
    deps = [
        "//internal/pkg/error_config:go_default_library",
        "//internal/platform/postgres_config/actor_profile_record_config:go_default_library",
        "//internal/platform/postgres_config/actor_rewards_info_record_config:go_default_library",
        "//internal/platform/postgres_config/client_config:go_default_library",
        "//internal/platform/postgres_config/post_votes_record_config:go_default_library",
        "//vendor/github.com/aws/aws-lambda-go/lambda:go_default_library",
    ],
)

go_binary(
    name = "get_recent_votes",
    embed = [":go_default_library"],
    visibility = ["//visibility:public"],
)

go_test(
    name = "go_default_test",
    srcs = ["get_recent_votes_test.go"],
    embed = [":go_default_library"],
    deps = [
        "//internal/platform/postgres_config/post_votes_record_config:go_default_library",
        "//vendor/github.com/stretchr/testify/assert:go_default_library",
    ],
)
