load("@io_bazel_rules_go//go:def.bzl", "go_binary", "go_library")

go_library(
    name = "go_default_library",
    srcs = ["get_reputations.go"],
    importpath = "BigBang/cmd/lambda/get_reputations",
    visibility = ["//visibility:private"],
    deps = [
        "//internal/platform/postgres_config/actor_reputations_record_config:go_default_library",
        "//internal/platform/postgres_config/client_config:go_default_library",
        "//vendor/github.com/aws/aws-lambda-go/lambda:go_default_library",
    ],
)

go_binary(
    name = "get_reputations",
    embed = [":go_default_library"],
    visibility = ["//visibility:public"],
)
