load("@io_bazel_rules_go//go:def.bzl", "go_binary", "go_library")

go_library(
    name = "go_default_library",
    srcs = ["refuel_reputations.go"],
    importpath = "BigBang/cmd/lambda/refuel_reputations",
    visibility = ["//visibility:private"],
    deps = [
        "//internal/app/feed_attributes:go_default_library",
        "//internal/platform/postgres_config/actor_reputations_record_config:go_default_library",
        "//internal/platform/postgres_config/client_config:go_default_library",
        "//internal/platform/postgres_config/reputations_refuel_record_config:go_default_library",
        "@com_github_aws_aws_lambda_go//lambda:go_default_library",
    ],
)

go_binary(
    name = "refuel_reputations",
    embed = [":go_default_library"],
    visibility = ["//visibility:public"],
)
