load("@io_bazel_rules_go//go:def.bzl", "go_library")

go_library(
    name = "go_default_library",
    srcs = [
        "activity.go",
        "actor.go",
        "actor_profile_status.go",
        "actor_type.go",
        "block_timestamp.go",
        "content.go",
        "feed_id.go",
        "fuel.go",
        "milestone_point.go",
        "milestone_points_redeem_request.go",
        "object.go",
        "post_type.go",
        "redeem_block_info.go",
        "reputation.go",
        "rewards_info.go",
        "source.go",
        "verb.go",
        "vote_info.go",
        "vote_type.go",
        "voter.go",
    ],
    importpath = "BigBang/internal/app/feed_attributes",
    visibility = ["//:__subpackages__"],
    deps = [
        "//internal/pkg/error_config:go_default_library",
        "//internal/pkg/utils:go_default_library",
        "//vendor/github.com/ethereum/go-ethereum/common:go_default_library",
        "//vendor/github.com/jmoiron/sqlx/types:go_default_library",
        "//vendor/gopkg.in/GetStream/stream-go2.v1:go_default_library",
    ],
)
