load("@io_bazel_rules_go//go:def.bzl", "go_library")

go_library(
    name = "go_default_library",
    srcs = [
        "milestone.go",
        "milestone_info.go",
        "milestone_state.go",
        "milestone_validators_info.go",
        "objective.go",
        "objective_votes_info.go",
        "project.go",
        "proxy_voting.go",
        "proxy_voting_info.go",
        "rating_vote.go",
        "rating_vote_activity.go",
    ],
    importpath = "BigBang/internal/app/tcr_attributes",
    visibility = ["//:__subpackages__"],
    deps = ["//vendor/github.com/jmoiron/sqlx/types:go_default_library"],
)
