load("@io_bazel_rules_go//go:def.bzl", "go_library")

go_library(
    name = "go_default_library",
    srcs = [
        "aws.go",
        "crypto.go",
    ],
    importpath = "BigBang/internal/pkg/utils",
    visibility = ["//:__subpackages__"],
    deps = [
        "@com_github_aws_aws_sdk_go//aws/session:go_default_library",
        "@com_github_aws_aws_sdk_go//service/dynamodb:go_default_library",
    ],
)
