load("@io_bazel_rules_go//go:def.bzl", "go_library")

go_library(
    name = "go_default_library",
    srcs = [
        "abi.go",
        "eth_client.go",
        "event.go",
        "topic.go",
    ],
    importpath = "BigBang/internal/platform/eth_config",
    visibility = ["//:__subpackages__"],
    deps = [
        "//internal/app/feed_attributes:go_default_library",
        "//internal/pkg/utils:go_default_library",
        "//internal/platform/getstream_config:go_default_library",
        "//internal/platform/postgres_config/client_config:go_default_library",
        "//internal/platform/postgres_config/feed/actor_profile_record_config:go_default_library",
        "//internal/platform/postgres_config/feed/actor_rewards_info_record_config:go_default_library",
        "//internal/platform/postgres_config/feed/actor_votes_counters_record_config:go_default_library",
        "//internal/platform/postgres_config/feed/post_config:go_default_library",
        "//internal/platform/postgres_config/feed/post_replies_record_config:go_default_library",
        "//internal/platform/postgres_config/feed/post_rewards_record_config:go_default_library",
        "//internal/platform/postgres_config/feed/post_votes_counters_record_config:go_default_library",
        "//internal/platform/postgres_config/feed/post_votes_record_config:go_default_library",
        "//internal/platform/postgres_config/feed/purchase_mps_record_config:go_default_library",
        "//vendor/github.com/ethereum/go-ethereum:go_default_library",
        "//vendor/github.com/ethereum/go-ethereum/accounts/abi:go_default_library",
        "//vendor/github.com/ethereum/go-ethereum/common:go_default_library",
        "//vendor/github.com/ethereum/go-ethereum/core/types:go_default_library",
        "//vendor/github.com/ethereum/go-ethereum/ethclient:go_default_library",
    ],
)
