load("@io_bazel_rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "go_default_library",
    srcs = ["constants.go"],
    importpath = "BigBang/test/apis/TCR",
    visibility = ["//visibility:public"],
)

go_test(
    name = "go_default_test",
    srcs = ["project_and_get_project_test.go"],
    embed = [":go_default_library"],
    deps = [
        "//cmd/lambda/TCR/get_project/config:go_default_library",
        "//cmd/lambda/TCR/new_project/config:go_default_library",
        "//internal/app/tcr_attributes:go_default_library",
        "//internal/pkg/api:go_default_library",
        "//internal/platform/postgres_config/TCR/project_config:go_default_library",
        "//vendor/github.com/mitchellh/mapstructure:go_default_library",
        "//vendor/github.com/stretchr/testify/assert:go_default_library",
    ],
)
